# P4

./: CMakeLists.txt  README.md  sdkconfig.defaults
components/bsp_extra/: idf_component.yml
components/bsp_extra/include/: bsp_board_extra.h
components/bsp_extra/src/: bsp_board_extra.c
components/espressif__esp_lvgl_port/include/: esp_lvgl_port.h
components/waveshare__esp32_p4_wifi6_touch_lcd_7b/: CMakeLists.txt  esp32_p4_wifi6_touch_lcd_7b.c  idf_component.yml
main/: CMakeLists.txt  hmi.c  hmi.h  hmi_auto_page.c  hmi_events.c  hmi_fonts.c  hmi_logger.c  hmi_logger.h  hmi_manual_page.c  hmi_modal_confirm.c  hmi_modal_setpoint.c  hmi_settings.c  hmi_styles.c  idf_component.yml  main.c  ui.c  ui.h
